# BD-Proyecto1

./: Bucket.h  CMakeLists.txt  HashIndex.h  README.md  Rating.h  find_query.h  hash_index.h  hash_timeResults.csv  input_query.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  query_type_input.cpp  query_type_input.h  randomFile.h  rating.h  res.qrc  sizes.h
aux_str/: Rating.h  main.cpp  rating.csv
